<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EveryBodyOnline</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="area">Area</string>
    <string name="adress">Adress</string>
    <string name="service_type">Service Type</string>
    <string name="service_sub_type">Service Sub Type</string>
    <string name="service_area">Service Area</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
      <string name="edit">Edit</string>
    <string name="select_type_of_profile">Select One Of Option Bellow </string>
    <string name="next">Next</string>
    <string name="consumer">Consumer</string>
    <string name="service_Provide">Provider</string>
    <string name="title_activity_service_type_selector">ServiceTypeSelector</string>
     <string name="selectmaincategory">Select Main Category</string>
     <string name="selectsubcategory">Select Sub Category</string>
     <string name="newuser">New User</string>
      <string name="Existinguser">Existing User</string>

</resources>