<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".EditProfile" >

    <RelativeLayout
        android:id="@+id/btnLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="3dp"
            android:background="@drawable/apptheme_btn_toggle_on_pressed_holo_light"
            android:padding="6dp"
            android:visibility="gone"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@drawable/apptheme_btn_toggle_on_pressed_holo_light"
            android:padding="6dp"
            android:visibility="gone"
            android:text="@string/cancel" />
         <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="3dp"
            android:background="@drawable/apptheme_btn_toggle_on_pressed_holo_light"
            android:padding="6dp"
            android:text="@string/edit" />
        
    </RelativeLayout>

    <EditText
        android:id="@+id/Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLayout"
        android:hint="Your Name"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/PhoneNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Name"
        android:hint="@string/phone_number"
        android:inputType="phone" />

    <AutoCompleteTextView
        android:id="@+id/City"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PhoneNumber"
        android:hint="@string/city" />

    <AutoCompleteTextView
        android:id="@+id/Area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/City"
        android:hint="@string/area" />

    <EditText
        android:id="@+id/Adress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Area"
        android:hint="@string/adress" />

</RelativeLayout>