<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SelectTypeOfProfile" >

    <TextView
        android:id="@+id/Select_Type_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_type_of_profile" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Select_Type_Title"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RadioButton
            android:id="@+id/Consumer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/consumer" />

        <RadioButton
            android:id="@+id/Service_Provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_Provide" />
    </RadioGroup>
    
    <Button 
        android:layout_centerHorizontal="true"
        android:layout_below="@id/radiogroup"
        android:id="@+id/btnNext"
         android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            
        
        />

</RelativeLayout>